Fixed relative paths

--- a/semaphore/index.html
+++ b/semaphore/index.html
@@ -38,6 +38,6 @@
         <footer>
                 <p>©Xavier L'Heureux 2017<br>Tous droits réservés</p>
         </footer>
-        <script src="/js/semaphore.js"></script>
+        <script src="/scout/js/semaphore.js"></script>
     </body>
 </html>
