Added minimum delay

--- a/semaphore/index.html
+++ b/semaphore/index.html
@@ -5,8 +5,8 @@
         <meta name="Copyright" content="© Xavier L'Heureux 2017">
         <meta name="Author" content="Xavier L'Heureux">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/css/main.css">
-        <link rel="stylesheet" href="/css/form.css">
+        <link rel="stylesheet" href="//chezxavier.qc.to/css/main.css">
+        <link rel="stylesheet" href="//chezxavier.qc.to/css/form.css">
     </head>
     <body>
         <header>
@@ -21,7 +21,7 @@
                 </svg>-->
             <div id="phase1">
                 <label for="vitesse">Vitesse (lettres/mn)</label>
-                <input type="number" min=12 max=150 value="30" id="vitesse" />
+                <input type="number" min=0 max=150 value="30" id="vitesse" />
                 <button onclick="phraseAlea()">Generer</button>
             </div>
             <div style="display: none" id="phase2">
