Added public release of semaphore and changed URLs

--- a/semaphore/index.html
+++ b/semaphore/index.html
@@ -5,8 +5,8 @@
         <meta name="Copyright" content="© Xavier L'Heureux 2017">
         <meta name="Author" content="Xavier L'Heureux">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="//chezxavier.qc.to/css/main.css">
-        <link rel="stylesheet" href="//chezxavier.qc.to/css/form.css">
+        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="/css/form.css">
     </head>
     <body>
         <header>
