--- a/index.html
+++ b/index.html
@@ -12,16 +12,6 @@
                 <meta name="Rating" content="general">
                 <meta name="Distribution" content="global">
                 <meta name="Expires" content="">
-                <meta name="DC.Content-Type" content="UTF-8">
-                <meta name="DC.Content-Language" content="fr">
-                <meta name="DC.Description" content="">
-                <meta name="DC.Keywords" content="">
-                <meta name="DC.Copyright" content="© Xavier L'Heureux 2017">
-                <meta name="DC.Author" content="Xavier L'Heureux">
-                <meta name="DC.Revisit-After" content="31 days">
-                <meta name="DC.Rating" content="general">
-                <meta name="DC.Distribution" content="global">
-                <meta name="DC.Expires" content="">
                 <meta name="viewport" content="width=device-width, initial-scale=1">
                 <link rel="stylesheet" href="/css/main.css">
         </head>
@@ -29,7 +19,8 @@
                 <header>
                 </header>
                 <div id="main">
-                        En développement
+                    <span style="color: hsb(0,70,50)">En développement</a>
+                    <a href="semaphore/">Sémaphore</a>
                 </div>
                 <footer>
                         <p>©Xavier L'Heureux 2017<br>Tous droits réservés</p>
