Suppression de JQuery, Copie des fichiers CSS

--- a/index.html
+++ b/index.html
@@ -16,15 +16,12 @@
                 <link rel="stylesheet" href="/css/main.css">
         </head>
         <body>
-                <header>
-                </header>
                 <div id="main">
-                    <span style="color: hsb(0,70,50)">En développement</a>
+                    <span style="color: hsb(0,70,50)">En développement</a><br/>
                     <a href="semaphore/">Sémaphore</a>
                 </div>
                 <footer>
                         <p>©Xavier L'Heureux 2017<br>Tous droits réservés</p>
                 </footer>
         </body>
-        <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 </html>
