--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <meta name="Distribution" content="global">
                 <meta name="Expires" content="">
                 <meta name="viewport" content="width=device-width, initial-scale=1">
-                <link rel="stylesheet" href="/css/main.css">
+                <link rel="stylesheet" href="css/main.css">
         </head>
         <body>
                 <div id="main">
